Fixing a few bugs

--- a/04-scDiffpop_GS1.Rmd
+++ b/04-scDiffpop_GS1.Rmd
@@ -55,7 +55,7 @@ SplitGroup <- function(Sco_sub, ixs) {
   Seurat::ScaleData(Sco_sub)
   
   #Run PCA on the variable features. Get 50 dimensional embeddings
-  Seurat::RunPCA(Sco, pc.genes = Sco_sub@assays$RNA@var.features, npcs = 50, verbose = FALSE)
+  Seurat::RunPCA(Sco_sub, pc.genes = Sco_sub@assays$RNA@var.features, npcs = 50, verbose = FALSE)
   embeddings <- Seurat::Embeddings(object = Sco_sub, reduction = 'pca')[,1:20]
   
   #Cluster via k means
